apps/go-playground/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: go-playground-ingress-ext
  namespace: tools
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`gop.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: go-playground
          port: main
