apps/go-playground/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: go-playground-ingress
  namespace: tools
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int-old
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`gop.sobrinho.pt`)
      kind: Rule
      services:
        - name: go-playground
          port: main
  tls:
    secretName: go-playground-cert
